﻿Version 1.14.1
- BUG: TortoiseMerge crashed if configured to
       not use Ribbons. (Stefan)
- BUG: Bugtraq links in log dialog didn't
       work anymore. (Stefan)
- BUG: various problems with dark theme. (Stefan)
- BUG: TortoiseBlame showd NUL chars if the
       file contained an utf8 BOM. (Stefan)
- BUG: Crash in ProjectMonitor when rearranging
       the tree view. (Stefan)

Version 1.14.0
See the release notes: https://tortoisesvn.net/tsvn_1.14_releasenotes.html

Version 1.13.2
- BUG: Crash in TMerge when indenting. (Stefan)
- BUG: Context menu in log dialog bottom pane
       would not work properly if repo url
       contains escaped chars. (Stefan)
- BUG: The "open with" from commit and other
       dialogs could show a dialog "server busy"
       that blocks the app. (Stefan)

Version 1.13.1
- BUG: binary files were not digitally signed
       for the release. (Stefan)
- BUG: missing c-runtime dlls. (Stefan)

Version 1.13.0
- NEW: linked against svn 1.13.
- BUG: various bugfixes.

Version 1.12.2
- BUG: Exporting files from the log dialog
       stopped at deleted entries. (Stefan)
- BUG: the word/excel diff scripts allowed
       macros to be executed. (Stefan)

Version 1.12.1
- BUG: Crash in the repo browser if externals
       with relative paths were present. (Stefan)
- BUG: "save as..." from the log dialog saved
       the file with an escaped name. (Stefan)
- BUG: When parsing SVNParentPath pages, the
       urls were not properly escaped. (Stefan)
- BUG: Context menu in TMerge didn't show up
       on secondary monitors. (Stefan)

Version 1.12.0
- BUG: Ignoring comments in TMerge could
       lead to memory exhaustion. (Stefan)

Version 1.11.1
- BUG: Diffing from the log dialog failed
       if the repository name itself
       contained non-ASCII chars. (Stefan)

Version 1.11.0
- BUG: Display issues in the log dialog when
       resizing the dialog. (Stefan)
- CHG: splitter positions saved separately