@@ -8,6 +8,9 @@
        file contained an utf8 BOM. (Stefan)
 - BUG: Crash in ProjectMonitor when rearranging
        the tree view. (Stefan)
+- BUG: opening the properties dialog from command
+       line with param /property showed wrong or
+       empty values. (Stefan)
 
 Version 1.14.0
 See the release notes: https://tortoisesvn.net/tsvn_1.14_releasenotes.html
